# ABC2VEC

./: .gitignore  ABC2Vec_Research_Brief.md  ABLATION_STUDY.md  ABLATION_STUDY_SUMMARY.md  ABLATION_TRAINING.md  DATASET_SECTION_SUMMARY.md  FIGURE_IMPROVEMENTS.md  PACKAGE_CREATION_SUMMARY.md  PROJECT_EXPLANATION.txt  README.md  train_ablation_1_mmm_only.sh  train_ablation_2_ti_only.sh  train_ablation_3_mmm_ti_scl.sh  train_ablation_4_mmm_scl.sh  train_ablation_5_ti_scl.sh  train_ablation_6_scl_only.sh  train_ablation_7_mmm_ti.sh  train_ablation_models.sh  train_mmm_ti.sh
Paper/: OVERLAP_FIXES.md  README_COMPILE.md  abc2vec.bib  abc2vec_paper.aux  abc2vec_paper.bbl  abc2vec_paper.blg  abc2vec_paper.fdb_latexmk  abc2vec_paper.fls  abc2vec_paper.tex
Taylor___Francis_LaTeX_template_p_reference_style_/: PAPER_SUMMARY.md  abc2vec.bib  abc2vec_paper.aux  abc2vec_paper.bbl  abc2vec_paper.blg  abc2vec_paper.fdb_latexmk  abc2vec_paper.fls  abc2vec_paper.tex  interact.cls  interacttfpsample.bib  interacttfpsample.tex
abc2vec/: CHANGELOG.md  DEPENDENCIES.md  PACKAGE_SUMMARY.md  QUICKSTART.md  QUICKSTART_UV.md  README.md  README_FOR_SHARING.md  START_HERE.md  __init__.py  losses.py  model.py  pyproject.toml  setup.cfg  setup.py  setup.sh  setup_uv.sh  tokenizer.py  verify_installation.py
abc2vec_package/: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  INSTALLATION_GUIDE.txt  LICENSE  MANIFEST.in  Makefile  QUICKSTART_UV.md  README.md  STRUCTURE.md  config.yaml  pyproject.toml  setup.cfg  setup.py  setup_and_test.sh  verify_installation.py
abc2vec_package/abc2vec/: __init__.py
abc2vec_package/abc2vec/data/: __init__.py  dataset.py  pipeline.py
abc2vec_package/abc2vec/evaluation/: __init__.py
abc2vec_package/abc2vec/model/: __init__.py
abc2vec_package/abc2vec/tokenizer/: __init__.py  patchifier.py  transposer.py  vocabulary.py
abc2vec_package/abc2vec/training/: __init__.py  trainer.py
abc2vec_package/abc2vec/utils/: __init__.py  config.py
abc2vec_package/scripts/: __init__.py  complete_workflow.py  generate_ablation_figures.py  generate_training_curves.py  run_clustering.py  run_cross_tradition.py  run_data_pipeline.py  run_evaluation.py  run_evolution.py  run_plagiarism.py  run_training.py
abc2vec_package/tests/: test_data.py  test_model.py
notebooks/: 01_Data_Pipeline.ipynb  02_ABC_Tokenizer.ipynb  03_Model_Architecture.ipynb  04_Pretraining_Objectives.ipynb  05_Pretraining.ipynb  06_Benchmark_Creation.ipynb  07_Retrieval_Evaluation.ipynb  08_Clustering_Analysis.ipynb  09_Cross_Tradition_Transfer.ipynb  10_Evolution_Visualization.ipynb  11_Probing_Experiments.ipynb  (+2 more)
(+55 files in other folders)
